@@ -8,6 +8,7 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -21,13 +22,13 @@ import com.multi.shop.api.multi_shop_api.security.filters.JwtAuthenticationFilte
 import com.multi.shop.api.multi_shop_api.security.filters.JwtValidationFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.boot.web.servlet.FilterRegistrationBean;
 
 @Configuration
 @EnableMethodSecurity(prePostEnabled = true)
 public class SpringSecurityConfig {
-
     private final AuthenticationConfiguration authConfig;
 
     public SpringSecurityConfig(AuthenticationConfiguration authConfig){ 
@@ -54,7 +55,7 @@ public class SpringSecurityConfig {
             .anyRequest().authenticated())
             .addFilter(new JwtAuthenticationFilter(authenticationManager()))
             .addFilter(new JwtValidationFilter(authenticationManager()))
-            .csrf(config -> config.disable())
+            .csrf(AbstractHttpConfigurer::disable)
             .cors(cors -> cors.configurationSource(sourceConfigurationSource()))
             .sessionManagement(management -> management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .build();
@@ -64,7 +65,7 @@ public class SpringSecurityConfig {
     CorsConfigurationSource sourceConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowedOriginPatterns(Arrays.asList("*"));
+        config.setAllowedOriginPatterns(List.of("*"));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
         config.setAllowedHeaders(Arrays.asList("Authorization", "content-type"));
         config.setAllowCredentials(true);
@@ -78,9 +79,7 @@ public class SpringSecurityConfig {
     @Bean
     FilterRegistrationBean<CorsFilter> corsFilter() {
         FilterRegistrationBean<CorsFilter> corsBean = new FilterRegistrationBean<> (new CorsFilter(sourceConfigurationSource()));
-
         corsBean.setOrder(Ordered.HIGHEST_PRECEDENCE);
-
         return corsBean;
     }
 }
